# python_script_example

./: LICENSE  README.md  setup.cfg  setup.py
script_example/: __init__.py  sample.py  script_example.py
test/: sample_test.py
