[metadata]
name = python_script_example
version = 0.1
summary = python script example
download_url = UNKNOWN
author = Shuji Suzuki
author_email = dolphinripple@gmail.com
classifier = License :: OSI Approved :: BSD License
    Development Status :: 7 - Inactive

[files]
packages = script_example
modules = test.sample_test
extra_files = LICENSE
    README.md
